--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
+    "@bananapus/core=lib/nana-core/src"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
