--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,8 @@ libs = ["lib"]
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
-    "@bananapus/core=lib/nana-core/src"
+    "@bananapus/core=lib/nana-core/src",
+    "@uniswap/v3-core=lib/v3-core/contracts"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
