--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,8 @@ remappings = [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     "@bananapus/core=lib/nana-core/src",
-    "@uniswap/v3-core=lib/v3-core/contracts"
+    "@uniswap/v3-core=lib/v3-core/contracts",
+    "@uniswap/permit2=lib/permit2",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
