--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,7 @@ remappings = [
     "@bananapus/core=lib/nana-core/src",
     "@uniswap/v3-core=lib/v3-core/contracts",
     "@uniswap/permit2=lib/permit2",
+    "@prb/math=lib/prb-math",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
