--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     "@bananapus/core=lib/nana-core/src",
     "@uniswap/v3-core=lib/v3-core/contracts",
+    "@uniswap/v3-core-patched=lib/v3-core-patched",
     "@uniswap/v3-periphery-flattened=lib/v3-periphery-flattened",
     "@uniswap/permit2=lib/permit2",
     "@prb/math=lib/prb-math",
